# context-engineering-starter-kit

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  build_zip.py  extract.py  improvements.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: claude_config.yaml  default_config.yaml  gemini_config.yaml  gpt4o_config.yaml  quality_thresholds.yaml
context_engineering/: __init__.py  hallucination.py  lifecycle.py  model_formatter.py  reasoning.py  ucef.py
docs/: architecture.md  deployment_roadmap.md  hallucination_prevention.md  lifecycle_guide.md  model_formatting_guide.md
examples/: customer_service_bot.py  research_analysis.py  technical_documentation.py
templates/: chain_of_thought_template.md  few_shot_template.md  multimodal_template.md  react_agent_template.md  system_prompt_template.md
tests/: test_hallucination.py  test_lifecycle.py
